<resources>
    <string name="app_name">MyShop</string>
    <string name="_3dot_menu_example">My shop Example</string>
    <string name="profile">Profile:</string>
    <string name="name_kaushlendra_kumar">Name: Kaushlendra Kumar</string>
    <string name="email_kaushalkumar00277_gmail_com">Email: Kaushalkumar00277@gmail.com</string>
    <string name="age_21_year_old">Age: 21 Year Old</string>
    <string name="profile_android_developer">Profile: Android Developer</string>
    <string name="location_raebareli_uttar_pradesh">Location: Raebareli Uttar Pradesh</string>
    <string name="companyname_ducat_noida">CompanyName: Ducat Noida</string>
    <string name="buds_boat">Buds Boat</string>
    <string name="black_earbuds">-Black earbuds</string>
    <string name="price_5">Price: - ₹5.</string>
    <string name="earphone_redbull">Earphone redbull</string>
    <string name="black_wire">-Black wire</string>
    <string name="price_2">Price: - ₹2.</string>
    <string name="cycle_ranger">Cycle Ranger</string>
    <string name="boys_riding">-boys riding</string>
    <string name="price_199">Price: - ₹199.</string>
    <string name="ryal_enfield_bike">Ryal Enfield Bike</string>
    <string name="classic_355">-classic 355</string>
    <string name="price_399">Price: - ₹399.</string>
    <string name="grocery_store">Grocery Store</string>
    <string name="foods">-foods</string>
    <string name="price_3">Price: - ₹3.</string>
    <string name="bartan_for_kitchen">Bartan for kitchen</string>
    <string name="kitchen_set">-kitchen set</string>
    <string name="price_10">Price: - ₹10.</string>
    <string name="man_kurta_pajama">Man Kurta Pajama</string>
    <string name="price_25">Price: - ₹25.</string>
    <string name="pink_white">-Pink White</string>
    <string name="lehnga_wedding">Lehnga Wedding</string>
    <string name="price_12">Price: - ₹10.</string>
    <string name="white_blue">-White blue</string>
    <string name="asian_sport_soes">Asian Sport soes</string>
    <string name="black">- Black</string>
    <string name="price_20">Price: - ₹20.</string>
    <string name="led_smarttv">-LED smartTv</string>
    <string name="sony_smart_tv">Sony Smart Tv</string>
    <string name="price_30">Price: - ₹30.</string>
    <string name="silver_black">-Silver black</string>
    <string name="apple_watch_ultra">Apple Watch ultra</string>
    <string name="price_512">Price: - ₹512.</string>
    <string name="price_999">Price: - ₹999.</string>
    <string name="galaxy_s23_ultra">Galaxy s23 ultra</string>
    <string name="blacks">-Black</string>
    <string name="todo">TODO</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="top_deals_offer">Top Deals Offer🎁</string>
    <string name="top_selling_products">Top Selling Products🎉</string>
    <string name="apple_watch">apple_watch</string>
    <string name="blek">-black</string>
    <string name="sport_soes">sport_soes</string>
    <string name="white">white</string>
    <string name="earphone">earphone</string>
    <string name="bartan">Bartan</string>
    <string name="name_kaushal_prajapati">Name: Kaushal Prajapati</string>
    <string name="email_kaushalprajapati123_gmail_com">Email: kaushalprajapati123@gmail.com</string>
    <string name="age_20_years_old">Age: 20 Years Old</string>
    <string name="mobile_9953857495">Mobile: 9953857495</string>
    <string name="company_name_xyz">Company Name: XYZ</string>
    <string name="raebareli_lucknow_up">Raebareli Lucknow (UP)</string>
</resources>